sua api cho phan  tiep don benh nhan